--- a/src/app.html
+++ b/src/app.html
@@ -2,6 +2,10 @@
 <html lang="en" data-theme="light">
   <head>
     <meta charset="utf-8" />
+    <meta
+      name="description"
+      content="Portfolio of Fritz Schubert and his projects."
+    />
     <meta name="description" content="Svelte demo app" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>whosFritz</title>
