--- a/src/app.html
+++ b/src/app.html
@@ -9,7 +9,7 @@
 		<meta name="description" content="Svelte demo app" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<title>whosFritz</title>
-		<link rel="icon" href="%sveltekit.assets%/favicon-fritz.png" />
+		<link rel="icon" href="%sveltekit.assets%/favicon-fritz-480.png" />
 		%sveltekit.head%
 	  </head>
 	<body data-sveltekit-preload-data="hover">
