--- a/src/app.html
+++ b/src/app.html
@@ -1,18 +1,18 @@
 <!doctype html>
-<html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<meta
-		  name="description"
-		  content="Portfolio of Fritz Schubert and his projects."
-		/>
-		<meta name="description" content="Svelte demo app" />
-		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<title>whosFritz</title>
-		<link rel="icon" href="%sveltekit.assets%/favicon-fritz-480.png" />
-		%sveltekit.head%
-	  </head>
-	<body data-sveltekit-preload-data="hover">
-		<div class="contents">%sveltekit.body%</div>
-	</body>
+<html lang="en" data-theme="">
+
+<head>
+	<meta charset="utf-8" />
+	<meta name="description" content="Portfolio of Fritz Schubert and his projects." />
+	<meta name="description" content="Svelte demo app" />
+	<meta name="viewport" content="width=device-width, initial-scale=1" />
+	<title>whosFritz</title>
+	<link rel="icon" href="%sveltekit.assets%/favicon-fritz-480.png" />
+	%sveltekit.head%
+</head>
+
+<body data-sveltekit-preload-data="hover">
+	<div class="contents">%sveltekit.body%</div>
+</body>
+
 </html>
