--- a/src/app.html
+++ b/src/app.html
@@ -8,6 +8,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	<title>whosFritz</title>
 	<link rel="icon" href="%sveltekit.assets%/favicon-fritz-480.png" />
+	<link rel="apple-touch-icon" href="%sveltekit.assets%/apple-touch-icon.png" />
 	%sveltekit.head%
 </head>
 
