added smooth scroll

--- a/src/app.html
+++ b/src/app.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en" data-theme="">
+<html lang="en" data-theme="" class="!scroll-smooth">
 
 <head>
 	<meta charset="utf-8" />
