--- a/src/app.html
+++ b/src/app.html
@@ -9,15 +9,25 @@
 	<title>whosFritz</title>
 	<link rel="icon" href="%sveltekit.assets%/favicon-fritz-480.png" />
 	<link rel="apple-touch-icon" href="%sveltekit.assets%/apple-touch-icon.png" />
+	<!-- Google Tag Manager -->
+	<script>(function (w, d, s, l, i) {
+			w[l] = w[l] || []; w[l].push({
+				'gtm.start':
+					new Date().getTime(), event: 'gtm.js'
+			}); var f = d.getElementsByTagName(s)[0],
+				j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : ''; j.async = true; j.src =
+					'https://www.googletagmanager.com/gtm.js?id=' + i + dl; f.parentNode.insertBefore(j, f);
+		})(window, document, 'script', 'dataLayer', 'GTM-5VGFPQJG');</script>
+	<!-- End Google Tag Manager -->
 	%sveltekit.head%
 </head>
 
 <body data-sveltekit-preload-data="hover">
+	<!-- Google Tag Manager (noscript) -->
+	<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-5VGFPQJG" height="0" width="0"
+			style="display:none;visibility:hidden"></iframe></noscript>
+	<!-- End Google Tag Manager (noscript) -->
 	<div class="contents">%sveltekit.body%</div>
-	<noscript>
-		<img src="https://shynet.whosfritz.de/ingress/479f4a00-cb6d-4d7b-86ec-b4928f77bc5c/pixel.gif">
-	</noscript>
-	<script defer src="https://shynet.whosfritz.de/ingress/479f4a00-cb6d-4d7b-86ec-b4928f77bc5c/script.js"></script>
 </body>
 
 </html>
