--- a/src/app.html
+++ b/src/app.html
@@ -14,6 +14,10 @@
 
 <body data-sveltekit-preload-data="hover">
 	<div class="contents">%sveltekit.body%</div>
+	<noscript></noscript>
+	<img src="https://shynet.whosfritz.de/ingress/479f4a00-cb6d-4d7b-86ec-b4928f77bc5c/pixel.gif" alt="">
+	</noscript>
+	<script defer src="https://shynet.whosfritz.de/ingress/479f4a00-cb6d-4d7b-86ec-b4928f77bc5c/script.js"></script>
 </body>
 
 </html>
